implement the math operation evaluate() function

--- a/index.html
+++ b/index.html
@@ -13,12 +13,8 @@
             <div id="title_container">
                 <div id="title">Calculator</div>
             </div>
-            <div id="calc_display">
-                
-            </div>
-            <div id="grid_container">
-
-            </div>
+            <div id="calc_display"></div>
+            <div id="grid_container"></div>
         </div>
     </div>
 </body>
